--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
+    "exceljs": "^4.3.0",
     "fastify-swagger": "^4.12.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
